
4.59  2013-11-28
  - Added support for permessage-deflate WebSocket compression.
  - Added has_compression method to Mojo::Transaction::WebSocket.
  - Relicensed all artwork to CC-SA version 4.0.

4.58  2013-11-19
  - Improved IIS and WebSphere compatibility of Mojo::Message::Request.
  - Improved Mojo::Collection to allow join without arguments.
  - Improved Mojo::DOM::HTML performance.
  - Fixed recursion bug in Mojo::Reactor::EV where timers could run more than
    once.
  - Fixed a few "0" value bugs in Mojo::DOM::HTML.

4.57  2013-11-11
  - Improved compatibility with IO::Socket::SSL 1.957.
  - Fixed error event bug in Mojo::IOLoop::Delay.

4.56  2013-11-09
  - Fixed backspace escaping bug in Mojo::JSON. (ig3)

4.55  2013-11-07
  - Fixed Windows bug in "daemon.t".

4.54  2013-11-07
  - Added parts attribute to Mojo::Home.
  - Fixed keep alive connection timeout bug in Mojo::UserAgent.
  - Fixed support for links within a page in Mojolicious::Plugin::PODRenderer.
  - Fixed home detection bug in Mojo.

4.53  2013-10-30
  - Fixed a few unsubscribe and error event bugs in Mojo::EventEmitter.

4.52  2013-10-29
  - Improved Mojo::EventEmitter to allow unhandled error events to be fatal.
    (powerman, sri)

4.51  2013-10-28
  - Added tag_with_error helper to Mojolicious::Plugin::TagHelpers.
  - Improved .ep template performance significantly, the number of helpers no
    longer has any effect. (jberger, sri)
  - Improved form_for performance.
  - Improved built-in templates with documentation search.
  - Fixed template inheritance bug in include helper.
  - Fixed a few multipart form handling bugs.

4.50  2013-10-22
  - Deprecated Mojo::UserAgent::app in favor of
    Mojo::UserAgent::Server::app.
  - Deprecated Mojo::UserAgent::app_url in favor of
    Mojo::UserAgent::Server::url.
  - Deprecated Mojo::UserAgent::detect_proxy in favor of
    Mojo::UserAgent::Proxy::detect.
  - Deprecated Mojo::UserAgent::http_proxy in favor of
    Mojo::UserAgent::Proxy::http.